sculpt mode | paint/undo/color attribute #121008

Closed
opened 2024-04-24 09:07:00 +02:00 by ^~^ · 14 comments

Broken: 4.1.1
Worked: 3.6.12

Caused by a6a2af5fdd

Steps to reproduce:

  1. Open attached test.blend
  2. Paint on the mesh
  3. Switch to vertex color attribute 1
  4. Paint on the mesh
  5. Undo
Original description ### there is two problem here

first - add 2 color attributes .
second - painting on one and switch to another and paint and undo the step.
u gonna notes here blender do double undo steps
the first one undo the paint stroke and the second one switch to the first color attribute . and idk if this bug or intended to behave like this . either way it annoying 😑

the second problem and as u can see in the video . when i added the two color attribute i made the base color white . but when i undo the stroke step blender change the base color to the default color which is black .

.
.
.
.
.
.
.
.
.
.
.
.
.
.....( why the default color is black 😑)

Broken: 4.1.1 Worked: 3.6.12 Caused by a6a2af5fdd89793d2fdba8827d5a295a449fb62e Steps to reproduce: 1. Open attached test.blend 2. Paint on the mesh 3. Switch to vertex color attribute 1 4. Paint on the mesh 5. Undo <details> <summary> Original description </summary> ### there is two problem here first - add 2 color attributes . second - painting on one and switch to another and paint and undo the step. u gonna notes here blender do double undo steps the first one undo the paint stroke and the second one switch to the first color attribute . and idk if this bug or intended to behave like this . either way it annoying 😑 the second problem and as u can see in the video . when i added the two color attribute i made the base color white . but when i undo the stroke step blender change the base color to the default color which is black . . . . . . . . . . . . . . .....( why the default color is black 😑) </details>
^~^ added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2024-04-24 09:07:01 +02:00
Member

Hi, thanks for the report. Can confirm the regression

Hi, thanks for the report. Can confirm the regression
Member

3e81f66998 most likely caused this.
@HooglyBoogly ^

Broke between a935701a872d - 4050b0d6dfdb

3e81f6699808b572c5e0a8649a6c82d6c31020bc most likely caused this. @HooglyBoogly ^ Broke between `a935701a872d - 4050b0d6dfdb`
Member

Not sure where the problem is. AFAICS, colors are properly swapped in restore_color -> BKE_pbvh_swap_colors
And the affected node is also tagged for the update

Not sure where the problem is. AFAICS, colors are properly swapped in `restore_color` -> `BKE_pbvh_swap_colors` And the affected node is also tagged for the update
Sean Kim self-assigned this 2024-06-04 17:44:30 +02:00
Member

Taking a look into this

Taking a look into this
Member

Updated the main post with some more details to help debugging

Updated the main post with some more details to help debugging
Member

This doesn't appear to be an issue with the actual vertex colors, it's something on the rendering side. Reselecting the active vertex color attribute fixes the view

This doesn't appear to be an issue with the actual vertex colors, it's something on the rendering side. Reselecting the active vertex color attribute fixes the view ![](/attachments/92a39e6f-0972-41b1-88bb-e96651e46020)
Author

This doesn't appear to be an issue with the actual vertex colors, it's something on the rendering side. Reselecting the active vertex color attribute fixes the view

but its still an issue 👀
.
and im gonna tell u how i deal with this issue
first i do one stroke that cant be seen (just to create an undo step) and then paint on the model so when i hit ctrl z it didnt go black and that prevent me form have to select the color attribute layer and that it self gonna create an undo step and remove the paint that i did 😵. u get the idea

so fixing this issue would be much appreciated 💖

> This doesn't appear to be an issue with the actual vertex colors, it's something on the rendering side. Reselecting the active vertex color attribute fixes the view > > ![](/attachments/92a39e6f-0972-41b1-88bb-e96651e46020) but its still an issue 👀 . and im gonna tell u how i deal with this issue first i do one stroke that cant be seen (just to create an undo step) and then paint on the model so when i hit `ctrl z` it didnt go black and that prevent me form have to select the `color attribute layer` and that it self gonna create an undo step and remove the paint that i did 😵. u get the idea so fixing this issue would be much appreciated 💖
Member

My previous update is just providing further context to anyone reading, I'm still working on figuring out what is causing this issue.

My previous update is just providing further context to anyone reading, I'm still working on figuring out what is causing this issue.
Member

I suspect it's this commit: f15bca64f2

Edit: Nope, not this

~~I suspect it's this commit: https://projects.blender.org/blender/blender/commit/f15bca64f23bd84b4086b09212bc9d3114b6b780~~ Edit: Nope, not this
Member

it's something on the rendering side. Reselecting the active vertex color attribute fixes the view

Ah, indeed.

I suspect it's this commit: f15bca64f2... Edit: Nope, not this

see: #121008 (comment)

> it's something on the rendering side. Reselecting the active vertex color attribute fixes the view Ah, indeed. > I suspect it's this commit: `f15bca64f2`... Edit: Nope, not this see: https://projects.blender.org/blender/blender/issues/121008#issuecomment-1174427
Member

see: #121008 (comment)

@PratikPB2123 - I noticed it when I started looking into this, but I have issues actually bisecting around that time due to the SVN / git switchover. Were you able to verify that it was the problem?

> see: https://projects.blender.org/blender/blender/issues/121008#issuecomment-1174427 @PratikPB2123 - I noticed it when I started looking into this, but I have issues actually bisecting around that time due to the SVN / git switchover. Were you able to verify that it was the problem?
Member

Unfortunately, I'm also unable to build on the hashes prior of "git lfs" switch.
I guess @lichtwerk might able to help here 🙁

Unfortunately, I'm also unable to build on the hashes prior of "git lfs" switch. I guess @lichtwerk might able to help here 🙁
Member

Caused by a6a2af5fdd

CC @HooglyBoogly

Caused by a6a2af5fdd89793d2fdba8827d5a295a449fb62e CC @HooglyBoogly
Member

Thanks @lichtwerk - I'll have a fix for this shortly

Thanks @lichtwerk - I'll have a fix for this shortly
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-06 22:11:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121008
No description provided.