Fix #121008: Paint undo causes uncolored mesh